# simp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: energy.rs  energy_utils.rs  image.rs  image_utils.rs  main.rs  pixel.rs  pixel_utils.rs
