[package]
name = "simp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
scan_fmt = "0.2.6"
rand = "0.8.5"
nalgebra = "*"
num-traits = "0.2.18"

[profile.release]
strip = true
lto = true
codegen-units = 1
incremental = true
panic = "abort"
